--- a/Dia2.html
+++ b/Dia2.html
@@ -11,7 +11,7 @@
 
     <script>
         function greeting(){
-            alert("Hello World!");
+            alert("Hello World!")
         }
 
     </script>
